--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "website",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd public && live-server"
   },
   "repository": {
     "type": "git",
